更新了删除分类、修改分类接口
